src/objects/Question_Form__c.object
<CustomObject>
    <fields>
        <fullName>CPM_PnP_or_Job_Aid__c</fullName>
        <label>CPM P&amp;P or Job Aid</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aged Process</fullName>
                </value>
                <value>
                    <fullName>Back End Process</fullName>
                </value>
                <value>
                    <fullName>Claim Impact Report Request CS</fullName>
                </value>
                <value>
                    <fullName>Combined Escalated Project Process</fullName>
                </value>
                <value>
                    <fullName>Communication Policy</fullName>
                </value>
                <value>
                    <fullName>Contract and Benefit Verification Process</fullName>
                </value>
                <value>
                    <fullName>COSMOS System Specific question</fullName>
                </value>
                <value>
                    <fullName>CPM Process</fullName>
                </value>
                <value>
                    <fullName>CS Report Pull and Scrub Process</fullName>
                </value>
                <value>
                    <fullName>CSP Optum Transplant Process</fullName>
                </value>
                <value>
                    <fullName>DCT Documentation Process</fullName>
                </value>
                <value>
                    <fullName>Determining if rework is required by state</fullName>
                </value>
                <value>
                    <fullName>Droid macro</fullName>
                </value>
                <value>
                    <fullName>Emptoris contract needed</fullName>
                </value>
                <value>
                    <fullName>Exception Process</fullName>
                </value>
                <value>
                    <fullName>Facets System Specific question</fullName>
                </value>
                <value>
                    <fullName>Fraud Flags</fullName>
                </value>
                <value>
                    <fullName>High Volume Review Process</fullName>
                </value>
                <value>
                    <fullName>Interest</fullName>
                </value>
                <value>
                    <fullName>Internal Business Partner Guide</fullName>
                </value>
                <value>
                    <fullName>Issue Section Process</fullName>
                </value>
                <value>
                    <fullName>Optum Sanctions</fullName>
                </value>
                <value>
                    <fullName>Overpayment Process</fullName>
                </value>
                <value>
                    <fullName>PHYCON Job Aid</fullName>
                </value>
                <value>
                    <fullName>PMMIS</fullName>
                </value>
                <value>
                    <fullName>Potential Rework of MID</fullName>
                </value>
                <value>
                    <fullName>Proactive Referral Process</fullName>
                </value>
                <value>
                    <fullName>Project Split and Spin off Process</fullName>
                </value>
                <value>
                    <fullName>Project Submission Process</fullName>
                </value>
                <value>
                    <fullName>Provider Selection</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPM_Request_Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CPM Request Details</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Does_File_Need_to_be_Split_due_to_Volume__c</fullName>
        <label>Does File Need to be Split due to Volume</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KL_or_My_Coach_SOP__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>KL or My Coach SOP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Cases_for_this_Provider_Issue__c</fullName>
        <inlineHelpText>Are there any other cases for this Provider Issue?</inlineHelpText>
        <label>Other Cases for this Provider Issue</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Details__c</fullName>
        <label>Project Details</label>
        <referenceTo>Project_Details__c</referenceTo>
        <relationshipLabel>Question Forms</relationshipLabel>
        <relationshipName>Question_Forms</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aged</fullName>
                </value>
                <value>
                    <fullName>Aged &amp; High Volume Review</fullName>
                </value>
                <value>
                    <fullName>CES SharePoint (PHS Only)</fullName>
                </value>
                <value>
                    <fullName>CE Review and Approval</fullName>
                </value>
                <value>
                    <fullName>CRR Review (M&amp;R Only)</fullName>
                </value>
                <value>
                    <fullName>Emails to Internal Business Partner (M&amp;R Only)</fullName>
                </value>
                <value>
                    <fullName>Extended Pend Review</fullName>
                </value>
                <value>
                    <fullName>High Volume Review</fullName>
                </value>
                <value>
                    <fullName>iCES/RPU2U</fullName>
                </value>
                <value>
                    <fullName>Interest Review</fullName>
                </value>
                <value>
                    <fullName>Level Review</fullName>
                </value>
                <value>
                    <fullName>Project Question</fullName>
                </value>
                <value>
                    <fullName>Redirect/Resolve</fullName>
                </value>
                <value>
                    <fullName>Report Paramater Clarification (PHS Only)</fullName>
                </value>
                <value>
                    <fullName>Start Date Change Request</fullName>
                </value>
                <value>
                    <fullName>Transition Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requested_On__c</fullName>
        <formula>DATEVALUE( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requested On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Response_Provided_By__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Response Provided By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Provided_On__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Response Provided On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Response</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Extended Pend Completed</fullName>
                </value>
                <value>
                    <fullName>Extended Pend Review</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>Waiting on Someone Else</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_Spent_in_Minutes__c</fullName>
        <label>Time Spent (in Minutes)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Question Form</label>
    <nameField>
        <displayFormat>QFRM-{00000000}</displayFormat>
        <label>Question Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Question Forms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>